fix: decrease Preloader z-index for fix conflict with sideMenu layer

--- a/src/components/Preloader/Preloader.css
+++ b/src/components/Preloader/Preloader.css
@@ -45,7 +45,7 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 4;
     padding: 20px;
     box-sizing: border-box;
 }
@@ -83,7 +83,7 @@
 }
 
 .preloader__round::before {
-    z-index: 10;
+    z-index: 4;
     background: var(--textcolor-main);
     animation: preloader-inside-red 1s ease-in-out infinite;
 }
